Implement instruction CRUD with S3 and DynamoDB
